linkedin profiles added

--- a/about-us.html
+++ b/about-us.html
@@ -117,6 +117,9 @@
                         <div class="card-text-subheading">
                             DIRECTOR
                         </div>
+                        <a href="https://www.linkedin.com/in/akash29196/">
+                            <img class="card_linkedin" src="public/images/home/linkedin.png" alt="" srcset="">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -143,6 +146,9 @@
                         <div class="card-text-subheading">
                             Founding Team
                         </div>
+                        <a href="https://www.linkedin.com/in/shail-singla-7456ab130/">
+                            <img class="card_linkedin" src="public/images/home/linkedin.png" alt="" srcset="">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -156,6 +162,9 @@
                         <div class="card-text-subheading">
                             Founding Team
                         </div>
+                        <a href="https://www.linkedin.com/in/bharath-singh-449a14172/">
+                            <img class="card_linkedin" src="public/images/home/linkedin.png" alt="" srcset="">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -173,6 +182,9 @@
                         <div class="card-text-subheading">
                             Founding Team
                         </div>
+                        <a href="https://www.linkedin.com/in/arpitkh101/">
+                            <img class="card_linkedin" src="public/images/home/linkedin.png" alt="" srcset="">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -186,6 +198,9 @@
                         <div class="card-text-subheading">
                             Founding Team
                         </div>
+                        <a href="https://www.linkedin.com/in/gauravlochab487/">
+                            <img class="card_linkedin" src="public/images/home/linkedin.png" alt="" srcset="">
+                        </a>
                     </div>
                 </div>
             </div>
@@ -199,6 +214,9 @@
                         <div class="card-text-subheading">
                             Annotation Head
                         </div>
+                        <a href="https://www.linkedin.com/in/saif-ullah-khan-343b491a7/">
+                            <img class="card_linkedin" src="public/images/home/linkedin.png" alt="" srcset="">
+                        </a>
                     </div>
                 </div>
             </div>
