--- a/about-us.html
+++ b/about-us.html
@@ -105,7 +105,7 @@
         <div class="row   text-center">
             <div class="col-sm-12">
                 <p class=" about-us-heading founders-heading text-center font-blue" data-aos="fade-up"
-                    data-aos-duration="1000">Out Team</p>
+                    data-aos-duration="1000">Our Team</p>
             </div>
             <div class="col-sm-4">
                 <div class="team-card text-center akash_card" data-aos="zoom-in" data-aos-duration="1000">
