--- a/blog.html
+++ b/blog.html
@@ -5,11 +5,13 @@
     <title>Blog - Pibit.ai</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="AI powered Computer Vision based software solution company providing AI products to the industry to automate it’s internal processes.">
+    <meta name="description"
+        content="AI powered Computer Vision based software solution company providing AI products to the industry to automate it’s internal processes.">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;300;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;300;500;600&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="public/images/home/full_logo.png" type="image/gif" sizes="16x16">
@@ -27,42 +29,31 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
                 <a class="navbar-brand" href="/"><span><img class="navbar-logo"
-              src="public/images/home/full_logo.png"></span></a>
+                            src="public/images/home/full_logo.png"></span></a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
-                    <li class="dropdown show products-list">
-                        <a class="btn btn-secondary dropdown-toggle nav-links links-left" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Solution<span class="yellow-circle-nav"></span>
-            </a>
+                    <li><a href="data-extractor.html" class="nav-links links-left">Solution
+                            <span class="yellow-circle-nav"></span>
+                        </a>
+                    </li>
+                    <li><a href="blog.html" class="nav-links links-left">Blogs<span
+                                class="yellow-circle-nav"></span></a></li>
+                    <li><a href="about-us.html" class="nav-links links-left">About Us<span
+                                class="yellow-circle-nav"></span></a>
+                    </li>
 
-                        <div class="dropdown-menu products-dropdown-menu" id="solutionsMenu" aria-labelledby="dropdownMenuLink">
-                            <p class="dropdown-item" id="dropdownMenuLink1">Document Intelligence
-                            </p>
-                            <div id="dropdownCatalog1" class="products-dropdown-menu desktop-d-none">
-                                <a class="dropdown-item dropdown-sub-links" href="data-extractor.html">Invoice OCR</a>
-                                <a class="dropdown-item dropdown-sub-links" href="data-extractor.html">Aadhar OCR</a>
-                                <a class="dropdown-item dropdown-sub-links" href="data-extractor.html">PAN OCR</a>
-                                <a class="dropdown-item dropdown-sub-links" href="data-extractor.html">License Plate OCR</a>
-                                <a class="dropdown-item dropdown-sub-links" href="data-extractor.html">Discharge Summary OCR</a>
-                                <a class="dropdown-item dropdown-sub-links" href="data-extractor.html">Lab Report OCR</a>
-                            </div>
-                        </div>
-                    </li>
-                    <li><a href="blog.html" class="nav-links links-left">Blogs<span class="yellow-circle-nav"></span></a></li>
-                    <li><a href="about-us.html" class="nav-links links-left">About Us<span class="yellow-circle-nav"></span></a>
-                    </li>
                 </ul>
-                <a href="schedule-demo.html"><span class="right-link-navbar">Schedule a Demo</span></a>
+                <a href="contact-us.html"><span class="right-link-navbar">Contact Us</span></a>
+                <!-- <a href="schedule-demo.html"><span class="right-link-navbar">Schedule a Demo</span></a>-->
             </div>
         </div>
     </nav>
-
 
     <p class="blog-welcome-text text-center">Welcome To our blog</p>
 
@@ -71,7 +62,8 @@
             <div class="row">
                 <div class="col-sm-8 blog-content-wrapper">
                     <p class="blog-heading">Benefits of Automating Invoice Data entry using AI powered OCR</p>
-                    <p class="blog-text">Manual Invoice data entry process is a time consuming and redundant process. This laborious process impacts businesses in many ways&hellip;
+                    <p class="blog-text">Manual Invoice data entry process is a time consuming and redundant process.
+                        This laborious process impacts businesses in many ways&hellip;
                     </p>
                     <p class="blog-read-time">3 min read</p>
                 </div>
@@ -87,7 +79,8 @@
             <div class="row">
                 <div class="col-sm-8 blog-content-wrapper">
                     <p class="blog-heading">Data Extraction from scanned documents and images</p>
-                    <p class="blog-text">A major problem that many companies are facing today is the easy access to the data available in the documents and images&hellip;
+                    <p class="blog-text">A major problem that many companies are facing today is the easy access to the
+                        data available in the documents and images&hellip;
                     </p>
                     <p class="blog-read-time">2 min read</p>
                 </div>
@@ -103,7 +96,8 @@
             <div class="row">
                 <div class="col-sm-8 blog-content-wrapper">
                     <p class="blog-heading">Do Companies have to take step towards Automating Claim Process?</p>
-                    <p class="blog-text">IoT and automation are no longer being considered as an innovation but have now emerged as the core components of an insurer’s survival and growth toolkit&hellip;
+                    <p class="blog-text">IoT and automation are no longer being considered as an innovation but have now
+                        emerged as the core components of an insurer’s survival and growth toolkit&hellip;
                     </p>
                     <p class="blog-read-time">2 min read</p>
                 </div>
@@ -114,56 +108,63 @@
         </a>
     </div>
 
-    <footer class="container-fluid footer-wrapper">
-        <div class="row">
-            <div class="container">
-                <div class="row">
-                    <div class="col-sm-12 footer-top">
-                        <p class="heading-top-footer text-center">Automate your processes with Pibit.ai</p>
-                        <p class="text-center footer-btn-wrapper"><a class="footer-demo-btn-link" href="schedule-demo.html"><span
-                  class="footer-schedule-btn">Schedule a Demo</span></a>
-                        </p>
-                    </div>
-                    <div class="col-sm-12">
-                        <div class="row">
-                            <div class="col-sm-8">
-                                <p class="bottom-footer-heading">Products:</p>
-                                <p class="product-links-wrapper">
-                                    <a href="data-extractor.html"><span class="footer-product-links">Document Intelligence</span></a>&nbsp;&nbsp;&nbsp;&nbsp;
-                                    <a href="data-extractor.html"><span class="footer-product-links">Invoice OCR</span></a>&nbsp;&nbsp;&nbsp;&nbsp;
-                                    <a href="data-extractor.html"><span class="footer-product-links">Aadhar OCR</span></a> <br/><br/>
-                                    <a href="data-extractor.html"><span class="footer-product-links">License Plate OCR</span></a>&nbsp;&nbsp;&nbsp;&nbsp;
-                                    <a href="data-extractor.html"><span class="footer-product-links">Discharge Summary OCR</span></a>&nbsp;&nbsp;&nbsp;&nbsp;
-                                    <a href="data-extractor.html"><span class="footer-product-links">Lab Report OCR</span></a>
-                                </p>
-                                <p class="desktop-element footer-logo-text"><img class="footer-logo" src="public/images/home/logo-white.png">Pibit.ai
-                                </p>
-                                <p class="footer-description desktop-element">Pibit.ai is an artificial intelligence-based software solution company providing products to industries to automate the manual recurring task.
-                                </p>
-                                <p class="footer-copyright desktop-element">&copy; All Rights Reserved</p>
-                            </div>
-                            <div class="col-sm-4">
-                                <p class="product-right-links-wrapper">
-                                    <a href="about-us.html"><span class="footer-product-links">About Us</span></a>
-                                    <a href="blog.html"><span class="footer-product-links">Blog</span></a>
-                                    <a href="schedule-demo.html"><span class="footer-product-links">Demo</span></a>
-                                </p>
-                                <p>
-                                    <a href="https://www.linkedin.com/company/ai-claim/" class="social-link-linkedIn" target="_blank"><img src="public/images/common/linked-in-square.png"></a>
-                                </p>
-                                <a href="contact-us.html"><span class="footer-product-links">Contact Us</span></a>
-                                <span class="footer-product">+91-7060334350</span>
-                                <p class="mobile-element footer-logo-text"><img class="footer-logo" src="public/images/home/logo-white.png">Pibit.ai
-                                </p>
-                                <p class="footer-description mobile-element">Pibit.ai is an artificial intelligence-based software solution company providing products to industries to automate the manual recurring task.
-                                </p>
-                                <p class="footer-copyright mobile-element">&copy; All Rights Reserved</p>
+    <div>
+        <footer class="container-fluid footer-wrapper">
+            <div class="row">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-sm-12 footer-top" data-aos="zoom-out" data-aos-duration="1000">
+                            <p class="heading-top-footer text-center">Automate your processes with Pibit.ai</p>
+                            <div class="text-center">
+                                <button class="banner-btn-home" data-toggle="modal"
+                                    data-target="#schedule_demo_popup">Schedule a Demo</button>
                             </div>
                         </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </footer>
+            <div class="row foother-container text-left">
+                <div class="col-sm-4 footer-cols" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="footer-heading">
+                        <img src="public/images/home/full_logo.png" alt="" srcset="">
+                    </div>
+                    <div class="footer-info">
+                        Pibit.ai is an artificial intelligence-based software solution company providing products to
+                        industries to automate the manual recurring task.
+                    </div>
+                    <img class="linkedin" src="public/images/home/linkedin.png" alt="" srcset="">
+                </div>
+                <div class="col-sm-4 footer-cols" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="footer-heading ">
+                        <span> Our</span> Products
+                    </div>
+                    <div class="footer-info">
+                        <ul>
+                            <li><a href="data-extractor.html">Data Extractor</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-4 footer-cols" data-aos="fade-up" data-aos-duration="1000">
+                    <div class="footer-heading ">
+                        <span> Our</span> Company
+                    </div>
+                    <div class="footer-info">
+                        <ul>
+                            <li><a href="about-us.html">About Us</a></li>
+                            <li><a href="blog.html">Blogs</a></li>
+                            <li><a href="#" data-toggle="modal" data-target="#schedule_demo_popup">Demo</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+            </div>
+            <div class="row copy-rights-row">
+                <hr />
+                <div class="copy-rights text-center">
+                    @ Copyright 2020 Pibit.ai. All rights reserved.
+                </div>
+            </div>
+        </footer>
+    </div>
 
 </body>
