--- a/contact-us.html
+++ b/contact-us.html
@@ -25,7 +25,7 @@
 
 <body>
 
-  <nav class="navbar navbar-inverse dark-nav">
+  <nav class="navbar navbar-inverse">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
@@ -33,42 +33,22 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand dark-nav-text" href="/"><span><img class="navbar-logo"
-              src="public/images/home/logo-white.png"></span>Pibit.ai</a>
+        <a class="navbar-brand" href="/"><span><img class="navbar-logo"
+              src="public/images/home/full_logo.png"></span></a>
       </div>
       <div class="collapse navbar-collapse" id="myNavbar">
         <ul class="nav navbar-nav">
-          <li class="dropdown show products-list">
-            <a class="btn btn-secondary dropdown-toggle nav-links links-left light-links" href="#" role="button"
-              id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Solution<span class="yellow-circle-nav"></span>
+          <li><a href="data-extractor.html" class="nav-links links-left">Solution
+              <span class="yellow-circle-nav"></span>
             </a>
+          </li>
+          <li><a href="blog.html" class="nav-links links-left">Blogs<span class="yellow-circle-nav"></span></a></li>
+          <li><a href="about-us.html" class="nav-links links-left">About Us<span class="yellow-circle-nav"></span></a>
+          </li>
 
-            <div class="dropdown-menu products-dropdown-menu" id="solutionsMenu" aria-labelledby="dropdownMenuLink">
-              <p class="dropdown-item" id="dropdownMenuLink1">Document
-                Intelligence</p>
-              <div id="dropdownCatalog1" class="products-dropdown-menu desktop-d-none">
-                <a class="dropdown-item dropdown-sub-links" href="data-extractor.html">Invoice OCR</a>
-                <a class="dropdown-item dropdown-sub-links" href="data-extractor.html">Aadhar OCR</a>
-                <a class="dropdown-item dropdown-sub-links" href="data-extractor.html">PAN OCR</a>
-                <a class="dropdown-item dropdown-sub-links" href="data-extractor.html">License Plate OCR</a>
-              </div>
-              <a class="dropdown-item" href="damage-assessor.html" role="button" id="dropdownMenuLink2">Inspection
-                Intelligence</a>
-              <div id="dropdownCatalog2" class="desktop-d-none">
-                <a class="dropdown-item dropdown-sub-links" href="damage-assessor.html">Pre-inspection</a>
-                <a class="dropdown-item dropdown-sub-links" href="damage-assessor.html">Damage Assessment</a>
-              </div>
-              <a class="dropdown-item" href="document-classifier.html">Image Classifier</a>
-            </div>
-          </li>
-          <li><a href="blog.html" class="nav-links links-left light-links">Blogs<span
-                class="yellow-circle-nav"></span></a></li>
-          <li><a href="about-us.html" class="nav-links links-left light-links">About Us<span
-                class="yellow-circle-nav"></span></a>
-          </li>
         </ul>
-        <a href="schedule-demo.html"><span class="right-link-navbar contact-us-schedule-link">Schedule a Demo</span></a>
+        <a href="contact-us.html"><span class="right-link-navbar">Contact Us</span></a>
+        <!-- <a href="schedule-demo.html"><span class="right-link-navbar">Schedule a Demo</span></a>-->
       </div>
     </div>
   </nav>
@@ -157,8 +137,7 @@
                 <p class="bottom-footer-heading">Products:</p>
                 <p class="product-links-wrapper">
                   <a href="data-extractor.html"><span class="footer-product-links">Document Intelligence</span></a>
-                  <a href="damage-assessor.html"><span class="footer-product-links">Inspection Intelligence</span></a>
-                  <a href="document-classifier.html"><span class="footer-product-links">Image Classifier</span></a>
+
                 </p>
                 <p class="desktop-element footer-logo-text"><img class="footer-logo"
                     src="public/images/home/logo-white.png">Pibit.ai
