--- a/schedule-demo.html
+++ b/schedule-demo.html
@@ -5,11 +5,13 @@
     <title>Schedule A Demo - Pibit.ai</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="AI powered Computer Vision based software solution company providing AI products to the industry to automate it’s internal processes.">
+    <meta name="description"
+        content="AI powered Computer Vision based software solution company providing AI products to the industry to automate it’s internal processes.">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;300;500;600&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@100;300;500;600&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="icon" href="public/images/home/logo-colored.png" type="image/gif" sizes="16x16">
@@ -27,42 +29,49 @@
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-        </button>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
                 <a class="navbar-brand dark-nav-text" href="/"><span><img class="navbar-logo"
-              src="public/images/home/logo-white.png"></span>Pibit.ai</a>
+                            src="public/images/home/logo-white.png"></span>Pibit.ai</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav">
                     <li class="dropdown show products-list">
-                        <a class="btn btn-secondary dropdown-toggle nav-links links-left light-links" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              Solution<span class="yellow-circle-nav"></span>
-            </a>
+                        <a class="btn btn-secondary dropdown-toggle nav-links links-left light-links" href="#"
+                            role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true"
+                            aria-expanded="false">
+                            Solution<span class="yellow-circle-nav"></span>
+                        </a>
 
-                        <div class="dropdown-menu products-dropdown-menu" id="solutionsMenu" aria-labelledby="dropdownMenuLink">
+                        <div class="dropdown-menu products-dropdown-menu" id="solutionsMenu"
+                            aria-labelledby="dropdownMenuLink">
                             <p class="dropdown-item" id="dropdownMenuLink1">Document Intelligence
                             </p>
                             <div id="dropdownCatalog1" class="products-dropdown-menu desktop-d-none">
                                 <a class="dropdown-item dropdown-sub-links" href="data-extractor.html">Invoice OCR</a>
                                 <a class="dropdown-item dropdown-sub-links" href="data-extractor.html">Aadhar OCR</a>
                                 <a class="dropdown-item dropdown-sub-links" href="data-extractor.html">PAN OCR</a>
-                                <a class="dropdown-item dropdown-sub-links" href="data-extractor.html">License Plate OCR</a>
+                                <a class="dropdown-item dropdown-sub-links" href="data-extractor.html">License Plate
+                                    OCR</a>
                             </div>
-                            <a class="dropdown-item" href="damage-assessor.html" role="button" id="dropdownMenuLink2">Inspection
-                Intelligence</a>
+                            <a class="dropdown-item" href="damage-assessor.html" role="button"
+                                id="dropdownMenuLink2">Inspection
+                                Intelligence</a>
                             <div id="dropdownCatalog2" class="desktop-d-none">
-                                <a class="dropdown-item dropdown-sub-links" href="damage-assessor.html">Pre-inspection</a>
-                                <a class="dropdown-item dropdown-sub-links" href="damage-assessor.html">Damage Assessment</a>
+                                <a class="dropdown-item dropdown-sub-links"
+                                    href="damage-assessor.html">Pre-inspection</a>
+                                <a class="dropdown-item dropdown-sub-links" href="damage-assessor.html">Damage
+                                    Assessment</a>
                             </div>
                             <a class="dropdown-item" href="document-classifier.html">Image Classifier</a>
                         </div>
                     </li>
                     <li><a href="blog.html" class="nav-links links-left light-links">Blogs<span
-                class="yellow-circle-nav"></span></a></li>
+                                class="yellow-circle-nav"></span></a></li>
                     <li><a href="about-us.html" class="nav-links links-left light-links">About Us<span
-                class="yellow-circle-nav"></span></a>
+                                class="yellow-circle-nav"></span></a>
                     </li>
                 </ul>
             </div>
@@ -76,7 +85,8 @@
     <div class="container-fluid form-full-banner">
         <div class="row">
             <div class="container">
-                <p class="form-banner-heading text-center">Fill out the below form and we will schedule a demo for you shortly
+                <p class="form-banner-heading text-center">Fill out the below form and we will schedule a demo for you
+                    shortly
                 </p>
             </div>
         </div>
@@ -90,27 +100,36 @@
             <div class="col-sm-6 col-sm-offset-3">
                 <form name="submit-to-google-sheet" class="custom-form bg-white row" id="personalInfoForm">
                     <div class="form-group col-md-6">
-                        <input type="text" class="form-control form-control-lg" id="firstName" name="firstName" required minLength="1" maxLength="50" data-msg-required="First name is required" placeholder="First Name" />
+                        <input type="text" class="form-control form-control-lg" id="firstName" name="firstName" required
+                            minLength="1" maxLength="50" data-msg-required="First name is required"
+                            placeholder="First Name" />
                     </div>
                     <div class="form-group col-md-6">
-                        <input type="text" class="form-control form-control-lg" id="lastName" name="lastName" required minLength="1" maxLength="50" data-msg-required="Last name is required" placeholder="Last Name" />
+                        <input type="text" class="form-control form-control-lg" id="lastName" name="lastName" required
+                            minLength="1" maxLength="50" data-msg-required="Last name is required"
+                            placeholder="Last Name" />
                     </div>
                     <div class="form-group col-md-12">
-                        <input type="text" class="form-control form-control-lg" id="companyName" name="companyName" required minLength="1" data-msg-required="Company name is required" placeholder="Company Name" />
+                        <input type="text" class="form-control form-control-lg" id="companyName" name="companyName"
+                            required minLength="1" data-msg-required="Company name is required"
+                            placeholder="Company Name" />
                     </div>
                     <div class="form-group col-md-12">
-                        <input type="email" class="form-control form-control-lg" id="email" name="email" required maxLength="50" data-msg-required="Email ID is required" placeholder="Email ID" />
+                        <input type="email" class="form-control form-control-lg" id="email" name="email" required
+                            maxLength="50" data-msg-required="Email ID is required" placeholder="Email ID" />
                     </div>
                     <div class="form-group col-md-12">
-                        <select class="form-control form-control-lg active" id="productName" name="productName" required data-msg-required="This field is required.">
-              <option disabled selected value> Product </option>
-              <option value="Data-Extractor">Data Extractor</option>
-              <option value="Image-Classifier">Document Classifier</option>
-              <option value="Damage-Assessor">Damage Assessment</option>
-            </select>
+                        <select class="form-control form-control-lg active" id="productName" name="productName" required
+                            data-msg-required="This field is required.">
+                            <option disabled selected value> Product </option>
+                            <option value="Data-Extractor">Data Extractor</option>
+                            <option value="Image-Classifier">Document Classifier</option>
+                            <option value="Damage-Assessor">Damage Assessment</option>
+                        </select>
                     </div>
                     <div class="form-group col-md-12">
-                        <textarea rows="5" class="form-control form-control-lg textarea-fix-lg" name='message' placeholder="Your Message"></textarea>
+                        <textarea rows="5" class="form-control form-control-lg textarea-fix-lg" name='message'
+                            placeholder="Your Message"></textarea>
                     </div>
                     <div class="col-md-12 text-center">
                         <button class="btn btn-form-yellow">Submit</button>
@@ -178,13 +197,19 @@
                             <div class="col-sm-8">
                                 <p class="bottom-footer-heading">Products:</p>
                                 <p class="product-links-wrapper">
-                                    <a href="data-extractor.html"><span class="footer-product-links">Data Extractor</span></a>
-                                    <a href="damage-assessor.html"><span class="footer-product-links">Damage Assessment</span></a>
-                                    <a href="document-classifier.html"><span class="footer-product-links">Document Classifier</span></a>
+                                    <a href="data-extractor.html"><span class="footer-product-links">Data
+                                            Extractor</span></a>
+                                    <a href="damage-assessor.html"><span class="footer-product-links">Damage
+                                            Assessment</span></a>
+                                    <a href="document-classifier.html"><span class="footer-product-links">Document
+                                            Classifier</span></a>
                                 </p>
-                                <p class="desktop-element footer-logo-text"><img class="footer-logo" src="public/images/home/logo-white.png">Pibit.ai
+                                <p class="desktop-element footer-logo-text"><img class="footer-logo"
+                                        src="public/images/home/logo-white.png">Pibit.ai
                                 </p>
-                                <p class="footer-description desktop-element">Pibit.ai is an artificial intelligence-based software solution company providing products to industries to automate the manual recurring task.
+                                <p class="footer-description desktop-element">Pibit.ai is an artificial
+                                    intelligence-based software solution company providing products to industries to
+                                    automate the manual recurring task.
                                 </p>
                                 <p class="footer-copyright desktop-element">&copy; All Rights Reserved</p>
                             </div>
@@ -195,13 +220,17 @@
                                     <a href="schedule-demo.html"><span class="footer-product-links">Demo</span></a>
                                 </p>
                                 <p>
-                                    <a href="https://www.linkedin.com/company/ai-claim/" class="social-link-linkedIn" target="_blank"><img src="public/images/common/linked-in-square.png"></a>
+                                    <a href="https://www.linkedin.com/company/ai-claim/" class="social-link-linkedIn"
+                                        target="_blank"><img src="public/images/common/linked-in-square.png"></a>
                                 </p>
                                 <a href="contact-us.html"><span class="footer-product-links">Contact Us</span></a>
                                 <span class="footer-product">+91-7060334350</span>
-                                <p class="mobile-element footer-logo-text"><img class="footer-logo" src="public/images/home/logo-white.png">Pibit.ai
+                                <p class="mobile-element footer-logo-text"><img class="footer-logo"
+                                        src="public/images/home/logo-white.png">Pibit.ai
                                 </p>
-                                <p class="footer-description mobile-element">Pibit.ai is an artificial intelligence-based software solution company providing products to industries to automate the manual recurring task.
+                                <p class="footer-description mobile-element">Pibit.ai is an artificial
+                                    intelligence-based software solution company providing products to industries to
+                                    automate the manual recurring task.
                                 </p>
                                 <p class="footer-copyright mobile-element">&copy; All Rights Reserved</p>
                             </div>
@@ -215,15 +244,16 @@
     <script>
         const scriptURL = 'https://script.google.com/macros/s/AKfycbyHPDx6kfCGy0RFN_PNeJQKxMCYP8nH_j8AV1G-2zXQPY_J7moi/exec'
         const form = document.forms['submit-to-google-sheet']
-
+        console.log(form);
         form.addEventListener('submit', e => {
             e.preventDefault()
             fetch(scriptURL, {
-                    method: 'POST',
-                    body: new FormData(form)
-                })
+                method: 'POST',
+                body: new FormData(form)
+            })
                 .then(response => {
-                    console.log('Success!', response);
+                    //console.log('Success!', response);
+                    console.log(new FormData(form));
                     if (response.status === 200) {
                         document.getElementById("modal-hide").style.display = "block";
                     }
