--- a/about-us.html
+++ b/about-us.html
@@ -99,7 +99,7 @@
                             <b>Akask Agarwal</b>
                         </div>
                         <div class="card-text-subheading">
-                            DIRECTOR
+                            CEO
                         </div>
                         <a href="https://www.linkedin.com/in/akash29196/">
                             <img class="card_linkedin" src="public/images/home/linkedin.png" alt="" srcset="">
@@ -269,7 +269,7 @@
                             <br />
                             <div class="form-floating">
                                 <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
-                                    style="height: 100px; width:500px"></textarea>
+                                    style="height: 100px;"></textarea>
                             </div>
                             <br />
                             <button type="button" class="btn btn-primary btn-block">Schedule Demo</button>
@@ -342,7 +342,7 @@
                             <br />
                             <div class="form-floating">
                                 <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
-                                    style="height: 100px; width:500px"></textarea>
+                                    style="height: 100px;"></textarea>
                             </div>
                             <br />
                             <button type="button" class="btn btn-primary btn-block">Submit</button>
