--- a/data-extractor.html
+++ b/data-extractor.html
@@ -406,7 +406,7 @@
                                 <br />
                                 <div class="form-floating">
                                     <textarea class="form-control" placeholder="Leave a comment here"
-                                        id="floatingTextarea2" style="height: 100px; width:500px"></textarea>
+                                        id="floatingTextarea2" style="height: 100px;"></textarea>
                                 </div>
                                 <br />
                                 <button type="button" class="btn btn-primary btn-block">Schedule Demo</button>
@@ -479,7 +479,7 @@
                                 <br />
                                 <div class="form-floating">
                                     <textarea class="form-control" placeholder="Leave a comment here"
-                                        id="floatingTextarea2" style="height: 100px; width:500px"></textarea>
+                                        id="floatingTextarea2" style="height: 100px;"></textarea>
                                 </div>
                                 <br />
                                 <button type="button" class="btn btn-primary btn-block">Submit</button>
