--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
                             <br />
                             <div class="form-floating">
                                 <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
-                                    style="height: 100px; width:500px"></textarea>
+                                    style="height: 100px;"></textarea>
                             </div>
                             <br />
                             <button type="button" class="btn btn-primary btn-block">Schedule Demo</button>
@@ -391,7 +391,7 @@
                             <br />
                             <div class="form-floating">
                                 <textarea class="form-control" placeholder="Leave a comment here" id="floatingTextarea2"
-                                    style="height: 100px; width:500px"></textarea>
+                                    style="height: 100px;"></textarea>
                             </div>
                             <br />
                             <button type="button" class="btn btn-primary btn-block">Submit</button>
