--- a/about-us.html
+++ b/about-us.html
@@ -96,7 +96,7 @@
                     <img src="public/images/about-us/akash.png" alt="" srcset="">
                     <div class="card-text">
                         <div class="card-text-heading">
-                            <b>Akask Agarwal</b>
+                            <b>Akash Agarwal</b>
                         </div>
                         <div class="card-text-subheading">
                             CEO
